nginx1/nginx1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx
  type: LoadBalancer
  externalIPs:
  - 192.168.1.100
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
