nginx1/nginx1-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: nginx1-ingress
  namespace: default
spec:
  tls:
  - hosts:
    - knode2   
    secretName: nginx1-ingress-tls
  rules:
  - host: knode2
    http:
      paths: 
      - path: /
        backend:
          serviceName: nginx-service
          servicePort: 80
